Fix issue of movie detail not displaying fine when movie's description is too long

--- a/src/app/components/common/movie/styles.scss
+++ b/src/app/components/common/movie/styles.scss
@@ -7,3 +7,7 @@
     height: 240px;
   }
 }
+
+.movie-description {
+  white-space: pre-wrap !important;
+}
