--- a/src/app/components/movies/detail/styles.scss
+++ b/src/app/components/movies/detail/styles.scss
@@ -1,5 +1,6 @@
 :host {
+  display: block;
+  width: 780px;
+  margin: auto;
   margin-top: 30px;
-  display: flex;
-  justify-content: center;
 }
